# detectk

./: .gitignore  .pre-commit-config.yaml  CONFIGURATION.md  CONTRIBUTING.md  DECISIONS.md  DEPLOYMENT.md  INSTALLATION.md  ORCHESTRATORS.md  QUICKSTART.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.1.1.md  TROUBLESHOOTING.md  detectk_profiles.yaml.template  pyproject.toml  run_tests.sh
.venv-build/: pyvenv.cfg
docs/: index.md
docs/development/: testing.md
docs/guides/: backtesting.md  collectors.md  detectors.md  profiles.md  quickstart.md
examples/: README.md  threshold_percentage.yaml
examples/backtest/: README.md  sessions_backtest.yaml
examples/http/: custom_rest_api.yaml  grafana_api.yaml  prometheus_query.yaml  simple_text_endpoint.yaml
examples/mad/: mad_seasonal.yaml  mad_simple.yaml
examples/mattermost/: README.md  conditional_template.yaml  custom_template.yaml  minimal_template.yaml  multi_detector_alert.yaml  rich_format.yaml  seasonal_alert.yaml  simple_alert.yaml
examples/missing_data/: heartbeat_monitoring.yaml  partition_availability.yaml
examples/multi_detector/: ab_testing.yaml
examples/profiles/: README.md  metric_with_profile.yaml  profiles_example.yaml
examples/quickstart/: README.md  quickstart.yaml
examples/seasonal/: README.md  api_errors_separate.yaml  game_league_cycle.yaml  sessions_hourly_dow.yaml
examples/slack/: rich_format.yaml  severity_based.yaml  simple_alert.yaml
examples/sql/: mysql_orders.yaml  postgresql_sessions.yaml  sqlite_local_metrics.yaml
examples/tags/: README.md  api_errors_5min.yaml  (+3 more)
(+4 files in other folders)
