[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "detectk-workspace"
version = "0.1.0"
description = "DetectK Monorepo Workspace"
readme = "README.md"
requires-python = ">=3.10"

# This is a workspace root - individual packages are in packages/
# Use: pip install -e packages/core[dev]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
